manifests/monitoring/graphana/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-main
  namespace: monitoring
  labels:
    app: grafana
    component: main
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: main
      annotations:
        scheduler.alpha.kubernetes.io/affinity: >
          {
            "nodeAffinity": {
              "requiredDuringSchedulingIgnoredDuringExecution": {
                "nodeSelectorTerms": [
                  {
                    "matchExpressions": [
                      {
                        "key": "affinity/grafana",
                        "operator": "In",
                        "values": ["true"]
                      }
                    ]
                  }
                ]
              }
            }
          }
    spec:
      containers:
      - image: grafana/grafana:4.0.2
        name: grafana-main
        # env:
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-data
        hostPath:
          path: /mnt/data/srv/grafana-data
