manifests/monitoring/graphana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: ingress
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: grafana.kube.vioa.de
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
  tls:
  - secretName: grafana-tls
    hosts:
    - grafana.kube.vioa.de
